// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should be properly formatted 1`] = `
"a = \\"1\\"
b = 2
c = 3.14
d = true
e = 1979-05-27T07:32:00.000Z

[f]
g = [ \\"h\\", \\"i\\", \\"j\\" ]
k = [ { l = \\"m\\" }, { n = \\"o\\", p = \\"qrs\\" } ]

[[t]]
u = \\"v\\"

[[t]]
w = \\"x\\"

[[t]]
y = \\"z\\"
"
`;

exports[`it should be properly formatted 2`] = `
"a = \\"1\\"
b = 2
c = 3.14
d = true
e = 1979-05-27T07:32:00.000Z

[f]
g = [\\"h\\", \\"i\\", \\"j\\",]
k = [{l = \\"m\\",}, {n = \\"o\\", p = \\"qrs\\",},]

[[t]]
u = \\"v\\"

[[t]]
w = \\"x\\"

[[t]]
y = \\"z\\"
"
`;
